[tool.poetry]
name = "chatrapper"
version = "0.1.0"
description = ""
authors = ["ultrasev <i@ultrasev.com>"]
readme = "README.md"
packages = [{include = "chatrapper"}]

[tool.poetry.dependencies]
python = "^3.8"
uuid = "^1.30"
httpx = "^0.27.0"
websockets = "^12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
